<?xml version="1.0"?>
<package format="2">
  <name>ply_publisher</name>
  <version>1.0.0</version>
  <description>The ply_publisher package</description>

  <maintainer email="ferrefrederick@gmail.com">ZepherusFF</maintainer>

  <license>GPLv3</license>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>